fix: long wrapping title text wrapping to new lines
fixes custom laps having very thick nav bars on small screens if title is huge

--- a/pages/assets/css/basic.css
+++ b/pages/assets/css/basic.css
@@ -769,6 +769,12 @@ input[type="radio"]:checked {
     }
 }
 
+.text-ellipsis {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .header-border-bottom {
     position: relative;
     padding-bottom: 30px;
